support result check for serial commands
impact:
    sanity/agent/agent.py
    sanity/launcher/parser.py

description:
    support result check for serial commands

test:
    1. with expected result can pass
    2. with unexpected would failed
    3. without expected parameter can normal execute

Signed-off-by: ChunAn Wu <an.wu@canonical.com>

--- a/tests/x8_high_MED.yaml
+++ b/tests/x8_high_MED.yaml
@@ -16,8 +16,8 @@ run_stage:
         utility: uuu
         method: system-user
     - eof_commands:
-        - sudo snap install --devmode checkbox-shiner --edge
-        - sudo snap refresh checkbox20 --beta
+      - cmd: sudo snap install --devmode checkbox-shiner --edge
+      - cmd: sudo snap refresh checkbox20 --beta
     - checkbox:
         snap_name: checkbox-shiner
         launcher: runner-launcher
