--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
     pytest-mock
 commands =
     {envbindir}/pip3 install .
-    {envbindir}/python -m black -l 79 --check sanity
+    {envbindir}/python -m black -l 79 --check sanity --diff --verbose
     {envbindir}/python -m flake8 sanity
     #{envbindir}/python -m pylint sanity
     {envbindir}/python -m pytest --doctest-modules --cov=sanity
