Fix pylint issue and enable pylint check in tox.ini
impact:
    agent/__init__.py
    agent/agent.py
    agent/checkbox.py
    agent/cmd.py
    agent/console.py
    agent/data.py
    agent/deploy.py
    agent/err.py
    agent/mail.py
    agent/net.py
    agent/scheduler.py
    agent/style.py
    agent_entry.py
    launcher/parser.py
    tox.ini
description:
    fix or disable pylint error

test:
    N/A

Signed-off-by: ChunAn Wu <an.wu@canonical.com>

--- a/tox.ini
+++ b/tox.ini
@@ -14,5 +14,5 @@ commands =
     {envbindir}/pip3 install .
     {envbindir}/python -m black -l 79 --check sanity --diff --verbose
     {envbindir}/python -m flake8 sanity
-    #{envbindir}/python -m pylint sanity
+    {envbindir}/python -m pylint sanity
     {envbindir}/python -m pytest --doctest-modules --cov=sanity
