Installing genio-tools in pyproject.toml instead of deploy.py
Signed-off-by: Aristo Chen <aristo.chen@canonical.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ dependencies = [
     "pyserial",
     "schedule",
     "wrapt_timeout_decorator",
-    "whl",
     "paramiko",
+    "genio-tools",
 ]
 
 dynamic = ["version"]
